--- a/springboot-service-zuul-service/src/main/resources/application.yml
+++ b/springboot-service-zuul-service/src/main/resources/application.yml
@@ -15,6 +15,9 @@ zuul:
     celulares:
       service-id: service-celulares
       path: /api/phone/**
+    users:
+      service-id: serivicio-usuarios
+      path: /api/us/**
 ribbon:
   ConnectTimeout: 3000
   ReadTimeout: 10000
