--- a/springboot-service-commons-users/pom.xml
+++ b/springboot-service-commons-users/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.17</version>
+		<version>2.3.12.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.microservice.commons.users</groupId>
+	<groupId>com.microservice.store.commons.users</groupId>
 	<artifactId>springboot-service-commons-users</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot-service-commons-users</name>
 	<description>Commons for Users</description>
 	<properties>
@@ -29,6 +29,4 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-
 </project>
